Adding map popularity changes
