# api-definitions/Repository.openapi+json.json
@@ -827,19 +827,21 @@
             },
             "post": {
                 "summary": "maps",
+                "description": "maps",
                 "operationId": "post-maps",
                 "responses": {
                     "200": {
-                        "description": null
+                        "description": "null"
                     }
                 }
             },
             "put": {
                 "summary": "maps",
+                "description": "maps",
                 "operationId": "put-maps",
                 "responses": {
                     "200": {
-                        "description": null
+                        "description": "null"
                     }
                 }
             }
@@ -849,64 +851,6 @@
                 "summary": "maps/{game-type}/{map-name}",
                 "description": "maps/{game-type}/{map-name}",
                 "operationId": "get-maps-game-type-map-name",
-                "parameters": [
-                    {
-                        "name": "game-type",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": ""
-                        }
-                    },
-                    {
-                        "name": "map-name",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": ""
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "null"
-                    }
-                }
-            }
-        },
-        "/maps/{game-type}/{map-name}/popularity": {
-            "get": {
-                "summary": "maps/{game-type}/{map-name}/popularity",
-                "description": "maps/{game-type}/{map-name}/popularity",
-                "operationId": "get-maps-game-type-map-name-popularity",
-                "parameters": [
-                    {
-                        "name": "game-type",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": ""
-                        }
-                    },
-                    {
-                        "name": "map-name",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": ""
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "null"
-                    }
-                }
-            },
-            "post": {
-                "summary": "maps/{game-type}/{map-name}/popularity",
-                "description": "maps/{game-type}/{map-name}/popularity",
-                "operationId": "post-maps-game-type-map-name-popularity",
                 "parameters": [
                     {
                         "name": "game-type",
@@ -1246,6 +1190,7 @@
         "/maps/{map-id}": {
             "get": {
                 "summary": "maps/{map-id}",
+                "description": "maps/{map-id}",
                 "operationId": "get-maps-map-id",
                 "parameters": [
                     {
@@ -1254,6 +1199,53 @@
                         "required": true,
                         "schema": {
                             "type": ""
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "null"
+                    }
+                }
+            }
+        },
+        "/maps/popularity": {
+            "post": {
+                "summary": "maps/popularity",
+                "operationId": "post-maps-popularity",
+                "responses": {
+                    "200": {
+                        "description": null
+                    }
+                }
+            }
+        },
+        "/maps/{map-id}/popularity/{player-id}": {
+            "post": {
+                "summary": "maps/{map-id}/popularity/{player-id}",
+                "operationId": "post-maps-map-id-popularity-player-id",
+                "parameters": [
+                    {
+                        "name": "map-id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": ""
+                        }
+                    },
+                    {
+                        "name": "player-id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": ""
+                        }
+                    },
+                    {
+                        "name": "like",
+                        "in": "query",
+                        "schema": {
+                            "type": "bool"
                         }
                     }
                 ],
